--- a/Perfil/templates/cv_pdf_maestro.html
+++ b/Perfil/templates/cv_pdf_maestro.html
@@ -111,7 +111,7 @@
             </td>
             <td class="photo-cell">
                 {% if perfil.fotoperfil %}
-                    <img src="{{ perfil.foto.path }}" class="profile-img"> (error)
+                    <img src="{{ perfil.foto.path }}" class="profile-img">
                 {% endif %}
             </td>
         </tr>
